2009-11-03  Don Porter  <dgp@users.sourceforge.net>

	*** 8.5.8 TAGGED FOR RELEASE ***

	* generic/tcl.h:	Bump to 8.5.8 for release.
	* library/init.tcl:
	* tools/tcl.wse.in:
	* unix/configure.in:
	* unix/tcl.spec:
	* win/configure.in:
	* README:

	* unix/configure:	autoconf-2.59
	* win/configure:

	* changes:	Update for 8.5.8 release.

2009-11-03  Andreas Kupries  <andreask@activestate.com>

	* library/safe.tcl (::safe::InterpSetConfig): [Bug 2854929]. Added
	code to recursively find deeper paths which may contain modules.
	Required to handle modules with names like 'platform::shell',
	which translate into 'platform/shell-X.tm', i.e arbitrarily deep
	subdirectories.

2009-11-03  Kevin B. Kenny  <kennykb@acm.org>
	
	* library/tzdata/Asia/Novokuznetsk: New tzdata locale for
	Kemerovo oblast', which now keeps Novosibirsk time and not
	Kranoyarsk time.
	* library/tzdata/Asia/Damascus: Syrian DST changes.
	* library/tzdata/Asia/Hong_Kong: Hong Kong historic DST corrections.
	Olson tzdata2009q.

2009-11-03  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tests/tcltest.test: Backport permissions fix for Win7.

2009-10-31  Donal K. Fellows  <dkf@users.sf.net>

	* generic/tclBasic.c (ExprRoundFunc): [Bug 2889593]: Correctly report
	the expected number of arguments when generating an error for round().

2009-10-29  Don Porter  <dgp@users.sourceforge.net>

	* generic/tcl.h:	[Bug 2800740]: Changed the typedef for the
	mp_digit type from:
		typedef unsigned long mp_digit;
	to:
		typedef unsigned int mp_digit;
	For 32-bit builds where "long" and "int" are two names for the same
	thing, this is no change at all.  For 64-bit builds, though, this
	causes the dp[] array of an mp_int to be made up of 32-bit elements
	instead of 64-bit elements.  This is a huge improvement because
	details elsewhere in the mp_int implementation cause only 28 bits of
	each element to be actually used storing number data.  Without this
	change bignums are over 50% wasted space on 64-bit systems.
