@@ -1,3 +1,10 @@
+2009-11-09  Don Porter  <dgp@users.sourceforge.net>
+
+	* generic/tclBasic.c (TclEvalObjEx):	Plug memory leak in 
+	TCL_EVAL_DIRECT evaluation.
+
+	* tests/info.test:	Resolve ambiguous resolution of variable "res".
+
 2009-11-03  Don Porter  <dgp@users.sourceforge.net>
 
 	*** 8.5.8 TAGGED FOR RELEASE ***
